--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
-  <link rel="stylesheet" href="https://pingendo.com/assets/bootstrap/bootstrap-4.0.0-alpha.6.css" type="text/css"> </head>
+  <link rel="stylesheet" href="Untitled.css" type="text/css"> </head>
 
 <body>
-  <nav class="navbar navbar-expand-md navbar-light bg-primary h-25">
+  <nav class="navbar navbar-expand-md navbar-light bg-primary h-10 fixed-top">
     <div class="container"> <a class="navbar-brand text-white" href="#"><b>IV</b>compatability</a> <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
         aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
