--- a/index.html
+++ b/index.html
@@ -20,12 +20,16 @@
       </div>
     </div>
   </nav>
-  <div class="py-5 section text-center">
-    <div class="container">
+  <div class="py-5">
+    <div class="container-fluid">
       <div class="row">
-        <div class="col-md-12">
-          <h1 class="text-primary">HEADING</h1>
-          <p class="lead">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu.</p>
+        <div class="col-md-6"></div>
+        <div class="col-md-6">
+          <ul class="nav nav-pills flex-column">
+            <li class="nav-item"> <a href="#" class="active nav-link">Home</a> </li>
+            <li class="nav-item"> <a class="nav-link" href="#">Profile</a> </li>
+            <li class="nav-item"> <a href="#" class="nav-link">Messages</a> </li>
+          </ul>
         </div>
       </div>
     </div>
