--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
   <link rel="stylesheet" href="Untitled.css" type="text/css"> </head>
 
 <body>
-  <nav class="navbar navbar-expand-md navbar-light bg-faded h-15">
-    <div class="container"> <a class="navbar-brand" href="#">Navbar</a> <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <nav class="navbar navbar-expand-md navbar-light h-15 bg-primary">
+    <div class="container"> <a class="navbar-brand text-white" href="#">IVcompatibility</a> <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+        aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
         <ul class="navbar-nav ">
-          <li class="nav-item active"> <a class="nav-link" href="#">Home</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="#">Link</a> </li>
+          <li class="nav-item active text-white"> <a class="nav-link" href="#">Home</a> </li>
+          <li class="nav-item text-white"> <a class="nav-link" href="#">Link</a> </li>
           <li class="nav-item"> <a class="nav-link disabled" href="#">Disabled</a> </li>
         </ul>
       </div>
@@ -23,14 +24,8 @@
   <div class="py-5">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-md-6"></div>
-        <div class="col-md-6">
-          <ul class="nav nav-pills flex-column">
-            <li class="nav-item"> <a href="#" class="active nav-link">Home</a> </li>
-            <li class="nav-item"> <a class="nav-link" href="#">Profile</a> </li>
-            <li class="nav-item"> <a href="#" class="nav-link">Messages</a> </li>
-          </ul>
-        </div>
+        <div class="col-md-9"></div>
+        <div class="col-md-3 h-50 p-3"><a href="#" class="btn btn-primary">Lijst Leegmaken <i class="mx-auto fa fa-trash fa-lg d-inline-block"></i></a> <br><br> <a href="#" class="btn btn-primary">Matrix generen&nbsp; <i class="mx-auto fa fa-delicious fa-lg d-inline"></i></a></div>
       </div>
     </div>
   </div>
