--- a/index.html
+++ b/index.html
@@ -7,16 +7,15 @@
   <link rel="stylesheet" href="Untitled.css" type="text/css"> </head>
 
 <body>
-  <nav class="navbar navbar-expand-md navbar-light h-15 bg-primary">
+  <nav class="navbar navbar-expand-md h-15 bg-primary navbar-dark">
     <div class="container"> <a class="navbar-brand text-white" href="#">IVcompatibility</a> <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
         aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-        <ul class="navbar-nav ">
+        <ul class="navbar-nav text-white">
           <li class="nav-item active text-white"> <a class="nav-link" href="#">Home</a> </li>
           <li class="nav-item text-white"> <a class="nav-link" href="#">Link</a> </li>
-          <li class="nav-item"> <a class="nav-link disabled" href="#">Disabled</a> </li>
         </ul>
       </div>
     </div>
